--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-A simple app, to take care of books.
+A simple app, to take care of books in an org. Probably a small digital library.
 
 It will also do the following:
 
