--- a/README
+++ b/README
@@ -6,4 +6,8 @@ It will also do the following:
 
 2. Which employee is the most voracious reader. 
 
-3. More features as it grows.  
+3. You can make a book request for the library to the admin. 
+
+4. More features as it grows.  
+
+5. Its live on library.agiliq.com
