--- a/README
+++ b/README
@@ -11,3 +11,8 @@ It will also do the following:
 4. More features as it grows.  
 
 5. Its live on library.agiliq.com
+
+TODO:
+1. Add a user profile.
+2. Write a script that auto populates the book details, in the database.
+3. Add user signup. 
