MOved to markdown

--- a/README
+++ b/README
@@ -2,17 +2,13 @@ A simple app, to take care of books in an org. Probably a small digital library.
 
 It will also do the following:
 
-1. Which is amongst the favourite book. 
-
+1. Which is amongst the favorite book. 
 2. Which employee is the most voracious reader. 
-
 3. You can make a book request for the library to the admin. 
-
 4. More features as it grows.  
-
-5. Its live on library.agiliq.com
+5. Its live on [library.agiliq.com](http://library.agiliq.com/)
 
 TODO:
 1. Add a user profile.
 2. Write a script that auto populates the book details, in the database.
-3. Add user signup. 
+
